<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".SosHelpActivity">

    <TextView
        android:id="@+id/textViewCoordinatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_coordinates_label"
        android:textSize="@dimen/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCoordinates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_spacing"
        android:text="@string/sos_coordinates_loading"
        android:textSize="@dimen/text_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCoordinatesLabel" />

    <Button
        android:id="@+id/buttonCallHotline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sos_call_hotline"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCoordinates" />

    <Button
        android:id="@+id/buttonShowOnMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/sos_show_on_map"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCallHotline" />

</androidx.constraintlayout.widget.ConstraintLayout>