<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".QuizResultActivity">

    <TextView
        android:id="@+id/textViewResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quiz_result_title"
        android:textSize="@dimen/text_primary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is"
        android:textSize="@dimen/text_secondary"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_primary"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/small_padding"
        tools:text="15"
        app:layout_constraintTop_toBottomOf="@+id/textViewScoreLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewInterpretationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interpretation_label"
        android:textSize="@dimen/text_secondary"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/textViewScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewInterpretation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_secondary"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        tools:text="Severe anxiety"
        app:layout_constraintTop_toBottomOf="@+id/textViewInterpretationLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonRetakeQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retake_quiz_button"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/textViewInterpretation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonBackToDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_dashboard_button"
        android:layout_marginTop="@dimen/small_padding"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="@color/white"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/buttonRetakeQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
