<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".AnxietyQuizActivity">

    <TextView
        android:id="@+id/textViewQuizTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anxiety_quiz_title"
        android:textSize="@dimen/text_primary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerQuiz"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuizTitle"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button"
            android:layout_marginEnd="@dimen/default_margin"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:foreground="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:visibility="gone"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:foreground="?attr/selectableItemBackground" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
